# dagrattler

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: lint.yml  tests.yml  typecheck.yml
src/dagrattler/: __init__.py  core.py  examples.py  operators.py  result.py
streaming_framework/: __init__.py  core.py  examples.py  operators.py
tests/: test_core.py  test_operators.py  test_result.py
