[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dagrattler"
version = "0.1.0"
description = "Small async streaming DAG framework"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["asyncio", "dag", "streaming", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/dunleabu/dagrattler"
Repository = "https://github.com/dunleabu/dagrattler"
Issues = "https://github.com/dunleabu/dagrattler/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
