[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "dagrattler"
version = "0.1.0"
description = "Small async streaming DAG framework"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["asyncio", "dag", "streaming", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/dunleabu/dagrattler"
Repository = "https://github.com/dunleabu/dagrattler"
Issues = "https://github.com/dunleabu/dagrattler/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
